Added libraries (Papa), requests.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,25 +8,30 @@
 	</head>
 	<body>
 		<div id="wrapper" class="container">
-			<div id="header-row" class="row">
-				<div class="col">
+			<div id="header-row" class="row justify-content-between">
+				<div class="col-7">
 					<h5 class="header-text">SARS-COV-2 en Chile</h5>
 				</div>
-				<div class="col">
+				<div class="col-4">
 					<h5 id="refreshDate" class="header-text">25 de Mayo</h5>
 				</div>
 			</div>
 			<div id="main-row" class="row">
-				<div id="first-col" class="col">
+				<div id="first-col" class="col-12">
 					<p class="main-text">
-					Hay <span id="totalCount">22.159</span> <span class="bold">casos</span>
-					en Chile. Hoy hubieron <span id="newCount">3.500</span> <span class="bold">casos nuevos,</span>
-					<span id="newCountYesterday">700</span> <span class="bold">mas que ayer.</span>
-					Hay <span id="activeCount">17.400</span> <span class="bold">casos activos,</span>
-					<span id="recoveredCount">3.500</span> <span class="bold">recuperados,</span> y
-					<span id="deadCount">450</span> <span class="bold">fallecidos</span> a la fecha -
-					ayer <span class="bold">murieron</span> <span id="yesterdayDeadCount">15</span>
+					Hay <span id="totalCount" class="count">22.159</span> <span class="bold">casos</span>
+					en Chile. Hoy hubieron <span id="newCount" class="count">3.500</span> <span class="bold">casos nuevos,</span>
+					<span id="newCountYesterday" class="count">700</span> <span class="bold">mas que ayer.</span>
+					Hay <span id="activeCount" class="count">17.400</span> <span class="bold">casos activos,</span>
+					<span id="recoveredCount" class="count">3.500</span> <span class="bold">recuperados,</span> y
+					<span id="deadCount" class="count">450</span> <span class="bold">fallecidos</span> a la fecha -
+					ayer <span class="bold">murieron</span> <span id="yesterdayDeadCount" class="count">15</span>
 					<span class="bold">personas.</span>
+					</p>
+				</div>
+				<div id="second-col" class="col-12">
+					<p class="main-text">
+					
 					</p>
 				</div>
 			</div>
