--- a/web/public/index.html
+++ b/web/public/index.html
@@ -21,17 +21,22 @@
 					<p class="main-text">
 					Hay <span id="totalCount" class="count">22.159</span> <span class="bold">casos</span>
 					en Chile. Hoy hubieron <span id="newCount" class="count">3.500</span> <span class="bold">casos nuevos,</span>
-					<span id="newCountYesterday" class="count">700</span> <span class="bold">mas que ayer.</span>
+					<span id="newCountYesterday" class="count">700</span> <span class="bold"><span id="switchNew">mas</span> que ayer.</span>
 					Hay <span id="activeCount" class="count">17.400</span> <span class="bold">casos activos,</span>
 					<span id="recoveredCount" class="count">3.500</span> <span class="bold">recuperados,</span> y
 					<span id="deadCount" class="count">450</span> <span class="bold">fallecidos</span> a la fecha -
-					ayer <span class="bold">murieron</span> <span id="yesterdayDeadCount" class="count">15</span>
+					hoy <span class="bold">murieron</span> <span id="yesterdayDeadCount" class="count">15</span>
 					<span class="bold">personas.</span>
 					</p>
 				</div>
 				<div id="second-col" class="col-12">
 					<p class="main-text">
-					
+					Nos quedan <span id="ventilatorCount" class="count">700</span> <span class="bold">ventiladores.</span> Hay
+					<span id="criticalCount" class="count">89</span> <span class="bold">pacientes criticos,</span>
+					<span id="bedCount" class="count">200</span> <span class="bold">en UCI.</span> Ayer se <span class="bold">testeo</span>
+					a <span id="testCount" class="count">18940</span> personas. La <span class="bold">tasa de infeccion</span> por cien
+					mil es <span id="rateCount" class="count">33.42</span>. A este ritmo, en <span id="dupTime" class="count">25</span>
+					<span class="bold">dias duplicamos</span> el numero.
 					</p>
 				</div>
 			</div>
