Added quarantine list.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -39,6 +39,11 @@
 					<span class="bold">dias duplicamos</span> el numero.
 					</p>
 				</div>
+				<div id="third-col" class="col-12">
+					<p class="main-text">
+					Las comunas en cuarentena son: <span id="quarantineList" class="bold"></span>
+					</p>
+				</div>
 			</div>
 		</div>
 		<script src="main.js"></script>
