--- a/web/public/index.html
+++ b/web/public/index.html
@@ -18,6 +18,7 @@
 			</div>
 			<div id="main-row" class="row">
 				<div id="first-col" class="col-12">
+					<span id="timer"></span>
 					<p class="main-text">
 					Hay <span id="totalCount" class="count">22.159</span> <span class="bold">casos</span>
 					en Chile. Hoy hubieron <span id="newCount" class="count">3.500</span> <span class="bold">casos nuevos,</span>
