Added counter styling

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -18,7 +18,9 @@
 			</div>
 			<div id="main-row" class="row">
 				<div id="first-col" class="col-12">
-					<span id="timer"></span>
+					<p class="main-text bold" style="padding-top: 2rem">Nuevo caso en: <span id="newTimer" class="count"></span></p>					
+					<p class="main-text bold">Nueva muerte en: <span id="deathTimer" class="count"></span></p>					
+					<p class="main-text bold" style="padding-bottom: 2rem">Nuevo recuperado: <span id="recoveredTimer" class="count"></span></p>					
 					<p class="main-text">
 					Hay <span id="totalCount" class="count">22.159</span> <span class="bold">casos</span>
 					en Chile. Hoy hubieron <span id="newCount" class="count">3.500</span> <span class="bold">casos nuevos,</span>
