--- a/web/public/index.html
+++ b/web/public/index.html
@@ -58,7 +58,7 @@
 							Modal Title
 						</h2>
 
-						<button class="modal_close" aria-label="Close modal" data-micromodal-close></button>
+						<button class="modal_close modal_btn" aria-label="Close modal" data-micromodal-close>X</button>
 					</header>
 					<div class="modal_content" id="modal-content">
 						Modal Content
