Charts handlers working

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -62,6 +62,7 @@
 					</header>
 					<div class="modal_content" id="modal-content">
 						Modal Content
+						<canvas width="400" height="400" id="chartInsert"></canvas>
 					</div>
 				</div>
 			</div>
