--- a/web/public/index.html
+++ b/web/public/index.html
@@ -54,14 +54,13 @@
 			<div class="modal_overlay" tabindex="-1" data-micromodal-close>
 				<div class="modal_container" role="dialog" aria-modal="true" aria-labelledby="modal-title">
 					<header class="modal_header">
-						<h2 class="modal_title" id="modal-title">
+						<!-- A BIT TOO BIG: <h2 class="modal_title" id="modal-title">
 							Modal Title
-						</h2>
-
-						<button class="modal_close modal_btn" aria-label="Close modal" data-micromodal-close>X</button>
+						</h2> --> 
+						<!-- MAYBE NOT NECESSARY <button class="modal_close modal_btn" aria-label="Close modal" data-micromodal-close>X</button> -->
+						<h4 id="chart-title" class="modal_title">Modal Content</h4>
 					</header>
 					<div class="modal_content" id="modal-content">
-						Modal Content
 						<canvas width="400" height="400" id="chartInsert"></canvas>
 					</div>
 				</div>
