Added explanatory text

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -48,6 +48,9 @@
 					Las comunas en cuarentena son: <span id="quarantineList" class="bold"></span>
 					</p>
 				</div>
+				<div id="fourth-col" class="col-12">
+					<p class="small-text">Sitio actualizado en base a la información publicada por el Ministerio de Ciencia y Tecnología en Github.</p>
+				</div>
 			</div>
 		</div>
 		<div class="modal micromodal-slide" id="modal" aria-hidden="true">
