Added github links

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -50,6 +50,14 @@
 				</div>
 				<div id="fourth-col" class="col-12">
 					<p class="small-text">Sitio actualizado en base a la información publicada por el Ministerio de Ciencia y Tecnología en Github.</p>
+					<p>	
+					<img class="github-img" src="img/github.png">
+					<a href="https://github.com/MinCiencia/Datos-COVID19" class="github-link">Minciencia Datos Covid19</a>
+					</p>
+					<p>
+					<img class="github-img" src="img/github.png">
+					<a href="https://github.com/nikokozak/covidpoem" class="github-link">Nikokozak en Github</a>
+					</p>
 				</div>
 			</div>
 		</div>
@@ -57,10 +65,6 @@
 			<div class="modal_overlay" tabindex="-1" data-micromodal-close>
 				<div class="modal_container" role="dialog" aria-modal="true" aria-labelledby="modal-title">
 					<header class="modal_header">
-						<!-- A BIT TOO BIG: <h2 class="modal_title" id="modal-title">
-							Modal Title
-						</h2> --> 
-						<!-- MAYBE NOT NECESSARY <button class="modal_close modal_btn" aria-label="Close modal" data-micromodal-close>X</button> -->
 						<h4 id="chart-title" class="modal_title">Modal Content</h4>
 					</header>
 					<div class="modal_content" id="modal-content">
